[package]
name = "vscode-problems-filtering"
version = "0.1.0"
edition = "2024"
authors = ["Pierre Faucquenoy"]
description = "Permit to filter vscode's problems view export in json"
readme = "README.md"
license = "MIT"
keywords = ["vscode", "problems"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tabled = "0.20"
